# hw

./: CMakeLists.txt
src/: calc.h  getch.c  getop.c  main.c  main_fun.c  stack.c
tests/: CMakeLists.txt  test.c
